# op2_control

./: .gitignore  CM730.cpp  CMakeLists.txt  package.xml  plugins.xml
cfg/: Walking.cfg
config/: ._robotis_op_message_controllers.yaml  goalie_jump.yaml  initialization.yaml  robotis_op_controller_config.yaml  robotis_op_message_controllers.yaml  robotis_op_position_controllers.yaml  robotis_op_states.yaml  walking.yaml
include/op2_control/: ._posvelacc_pid_command_interface.h  forward_msg_cmd_controller.h  msg_command_inteface.h  op2_controller.h  op2_robot_hw.h  posvelacc_pid_command_interface.h  robotis_op_hardware_interface.h  walking_controller.h
include/robotis_op_ros_control/: forward_msg_cmd_controller.h  posvelacc_pid_command_interface.h  robotis_op_hardware_interface.h  robotis_op_ros_controller.h
launch/: goalie.launch  goalie_unload.launch  load_goalie_jump_controller.launch  load_goealie_jump_controller.launch  load_message_controllers.launch  load_position_controllers.launch  op2_controller.launch  robotis_op_ros_controller.launch  walking.launch
msg/: PIDPosVelAcc.msg
src/: ._goalie_jump_controller.cpp  darwin_joint_controller.cpp  goalie_jump_controller.cpp  op2_controller.cpp  op2_robot_hw.cpp  robotis_op_hardware_interface.cpp  robotis_op_ros_controller.cpp  walking_controller.cpp
tests/: ._move.cpp  move.cpp
